--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -77,22 +77,16 @@ td, th {
 }
 
 .tooltip {
-  position:relative; /* making the .tooltip span a container for the tooltip text */
+  position:relative;
 }
 
 .tooltip:before {
-  content: attr(data-text); /* here's the magic */
+  content: attr(data-text);
   position:absolute;
-  
-  /* vertically center */
   top:50%;
   transform:translateY(-50%);
-  
-  /* move to right */
   right:100%;
-  margin-right:5px; /* and add a small left margin */
-  
-  /* basic styles */
+  margin-right: 5px;
   width:100px;
   padding:5px;
   border-radius:10px;
@@ -100,38 +94,35 @@ td, th {
   color: #fff;
   font-size: 14px;
   text-align:center;
-
-  display:none; /* hide by default */
+  display:none;
 }
 
 .tooltip:hover:before {
   display:block;
 }
 
-/* The Modal (background) */
 .modal {
   display: block;
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto;
+  margin-top: 10%;
   padding: 0px;
   border: 1px solid #888;
-  width: 40%; /* Could be more or less, depending on screen size */
+  width: 40%;
 }
 
-/* The Close Button */
 .close {
   color: #aaa;
   float: right;
@@ -164,7 +155,6 @@ label {
 
 div.alert {
   padding: 15px;
-  background-color: #f44336; /* Red */
   color: white;
   font-weight: 600;
   margin-bottom: 15px;
@@ -172,11 +162,11 @@ div.alert {
 }
 
 div.alert-success {
-  background-color: #04AA6D; /* Red */
+  background-color: #04AA6D;
 }
 
 div.alert-error {
-  background-color: #FA5447; /* Red */
+  background-color: #FA5447;
 }
 
 .closebtn {
