--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -123,6 +123,12 @@ td, th {
   width: 40%;
 }
 
+@media screen and (max-width: 600px) {
+  .modal-content {
+    width: 80%;
+  }
+}
+
 .close {
   color: #aaa;
   float: right;
@@ -190,4 +196,30 @@ a.icon-option {
 
 .text-right {
   text-align: right;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
